tests/checker/diagnostics/0573_functor_opaque_result_annotation_mismatch_03.ml.infer.expected
File "0573_functor_opaque_result_annotation_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0573_functor_opaque_result_annotation_mismatch_03 is not a valid module name.

File "0573_functor_opaque_result_annotation_mismatch_03.ml", line 20, characters 14-25:
20 | let _ : int = Out_gamma.y
                   ^^^^^^^^^^^
Error: The value Out_gamma.y has type Out_gamma.u = Make_gamma(Input_gamma).u
       but an expression was expected of type int
